retro-core: Support partially setting memory regions

When a memory region is set with less data than expected, fill the rest
with zeros instead of failing.

This helps supporting Libretro cores with fluctuating memory sizes.

https://bugzilla.gnome.org/show_bug.cgi?id=787548